--- a/ReactNetDemo/Views/Home/Index.cshtml
+++ b/ReactNetDemo/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <title>Hello React</title>
 </head>
 <body>
-    @Html.React("CommentBox", new {
+    @Html.React("Components.CommentBox", new {
         initialData = Model,
         url = Url.Action("Comments"),
         submitUrl = Url.Action("AddComment"),
@@ -16,7 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js"></script>
-    <script src="@Url.Content("~/Scripts/Tutorial.jsx")"></script>
+    <script src="@Url.Content("~/build/bundle.client.js")"></script>
     @Html.ReactInitJavaScript()
 </body>
 </html>
