--- a/ReactNetDemo/Views/Home/Index.cshtml
+++ b/ReactNetDemo/Views/Home/Index.cshtml
@@ -1,22 +1,12 @@
 ﻿@model IEnumerable<ReactNetDemo.Models.CommentModel>
+
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<html>
-<head>
-    <title>Hello React</title>
-</head>
-<body>
-    @Html.React("Components.CommentBox", new {
-        initialData = Model,
-        url = Url.Action("Comments"),
-        submitUrl = Url.Action("AddComment"),
-        pollInterval = 2000
-    })
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.3.2/react-dom.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/remarkable/1.7.1/remarkable.min.js"></script>
-    <script src="@Url.Content("~/build/bundle.client.js")"></script>
-    @Html.ReactInitJavaScript()
-</body>
-</html>
+
+@Html.React("Components.CommentBox", new {
+    initialData = Model,
+    url = Url.Action("Comments"),
+    submitUrl = Url.Action("AddComment"),
+    pollInterval = 2000
+})
